Add 1.9.0 changelog entry; fix stale panel-gating docs
Write the CHANGELOG.md [1.9.0] entry covering all 29 PRs merged since
v1.8.0 (#476-#504): durable JDBC persistence for Live Activity, the
Exceptions triage workflow, SQL call-site/N+1 capture, a Vulnerabilities
dismiss/restore workflow, several Quarkus parity features, a full audit
pass across all nine advisor rule sets, and the XSS/prod-shell-guard
security fixes.

While auditing docs for sync with the code, found that
.github/copilot-instructions.md still described per-panel access gating
and the static-shell production suppression as Spring-only/unresolved
gaps, and cited a stale "18 tools" MCP count -- all superseded by #491,
#497, and #502. Updated the five affected passages to describe
QuarkusPanelAccessFilter, BootUiProdShellGuardFilter, and the corrected
20-tool count accurately. The user-facing docs (docs/QUARKUS-SUPPORT.md,
docs/PROPERTIES.md, docs/SETUP.md) were already correct.

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>